--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -8,14 +8,17 @@ current: tag
 ---
 
 <!-- < dynamically overriding backgrounds for tags as well as descriptions -->
+{% if page.url contains 'DataStructure' %}
+    {% assign new_cover='/assets/images/cover5.jpg' %}
+    {% assign tag_description='DataStructure.' %}
 {% if page.url contains 'fables' %}
-    {% assign new_cover='assets/images/cover3.jpg' %}
+    {% assign new_cover='/assets/images/cover3.jpg' %}
     {% assign tag_description='A series of short stories that make you think.' %}
 {% elsif page.url contains 'speeches' %}
-    {% assign new_cover='assets/images/cover7.jpg' %}
+    {% assign new_cover='/assets/images/cover7.jpg' %}
     {% assign tag_description='Some of the greatest words ever spoken.' %}
 {% elsif page.url contains 'fiction' %}
-    {% assign new_cover='assets/images/cover1.jpg' %}
+    {% assign new_cover='/assets/images/cover1.jpg' %}
 {% endif %}
 
 <!-- < default}} -->
