--- a/_layouts/author.html
+++ b/_layouts/author.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 title: Author
-cover: 'assets/images/cover4.jpg'
+cover: '/assets/images/cover4.jpg'
 class: 'author-template'
 navigation: True
 label: Author
-logo: 'assets/images/ghost.png'
+logo: '/assets/images/ghost.png'
 current: author
 ---
 <!-- < default}} -->
