--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -10,8 +10,8 @@ current: tag
 <!-- < dynamically overriding backgrounds for tags as well as descriptions -->
 {% if page.url contains 'datastructure' %}
     {% assign new_cover='/assets/images/cover5.jpg' %}
-    {% assign tag_description='####### datastructure #######' %}
-{% if page.url contains 'fables' %}
+    {% assign tag_description='DataStructure' %}
+{% elsif page.url contains 'fables' %}
     {% assign new_cover='/assets/images/cover3.jpg' %}
     {% assign tag_description='A series of short stories that make you think.' %}
 {% elsif page.url contains 'speeches' %}
