--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,9 +6,8 @@
     <ul>
         <li class="nav-home {% if page.current == 'home' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/">Home</a></li>
         <li class="nav-about {% if page.current == 'about' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/about">About</a></li>
-        <li class="nav-datastructure {% if page.url contains 'datastructure' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/tag/datastructure">DataStructure</a></li>
-        <li class="nav-fables {% if page.url contains 'fables' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/tag/fables">Fables</a></li>
-        <li class="nav-speeches {% if page.url contains 'speeches' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/tag/speeches">Speeches</a></li>
+        <li class="nav-data-structure {% if page.url contains 'data-structure' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/tag/data-structure">Data Structure</a></li>
+        <li class="nav-operating-system {% if page.url contains 'operating-system' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/tag/operating-system">Operating System</a></li>
         <li class="nav-fiction {% if page.url contains 'fiction' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/tag/fiction">Fiction</a></li>
         <li class="nav-author {% if page.current == 'author' %} nav-current{% endif %}" role="presentation"><a href="{{ site.baseurl }}/author">Author</a></li>
     </ul>
