--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <!-- [[! Page Meta ]] -->
-    <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
+    <!-- <title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title> -->
+    <title>{{ site.name }}</title>
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}" />
 
     <meta name="HandheldFriendly" content="True" />
