--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,7 +19,7 @@
 {
     "@context": "http://schema.org",
     "@type": "Website",
-    "publisher": "{{ site.name }}",
+    "publisher": "{{ site.author }}",
     "name": "{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}",
     "url": "{{ site.url }}{% if site.baseurl %}{{ site.baseurl }}{% endif %}{{ page.url }}",
     "image": "{{ site.baseurl }}{% if page.cover %}{{ page.cover }}{% else %}/assets/images/cover1.jpg{% endif %}",
