--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -32,7 +32,11 @@ current: tag
     </nav>
     <div class="vertical">
         <div class="main-header-content inner">
-            <h1 class="page-title">{{ page.title }}</h1>
+            <h1 class="page-title">
+                {% if page.title %}{{ page.title }}
+                {% else %} No Title
+                {% endif %}
+            </h1>
             <h2 class="page-description">
             {% if tag_description %}
                 {{ tag_description }}
